--- a/app/views/home/_submit.html.erb
+++ b/app/views/home/_submit.html.erb
@@ -1,4 +1,4 @@
-<small><%= date_span_with_title(submit.created_at)%></small>
+<small><%= date_span_with_title(submit.submitted_at)%></small>
 <h5 class="card-title">You submitted <%= submit.pset.name %>!</h5>
 
 <% if submit.url %>
