--- a/app/views/home/_alerts.html.erb
+++ b/app/views/home/_alerts.html.erb
@@ -1,4 +1,4 @@
-<div class="card-columns">
+<div class="card-columns" style="column-count:2">
 <% @alerts.each do |item| %>
 	<div class="card">
 		<div class="card-body">
