--- a/app/views/students/_tabs.html.erb
+++ b/app/views/students/_tabs.html.erb
@@ -59,8 +59,9 @@
 				<% if current_user.admin? && GradeTools.available? %>
 				<div class="dropdown-divider"></div>
 				<%= link_to 'Calculate final grades'.html_safe, assign_all_final_grades_path(schedule: @current_schedule_id), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
-				<%= link_to 'Enter test grades'.html_safe, students_quiz_path, class:"dropdown-item"  %>
 				<% end %>
+				<div class="dropdown-divider"></div>
+				<%= link_to 'Enter test grades'.html_safe, students_quiz_path, class:"dropdown-item"  %>
 			</div>
 		</div>
 
