--- a/app/views/students/quiz.html.erb
+++ b/app/views/students/quiz.html.erb
@@ -1,25 +1,39 @@
 <div class="col-12">
 
-<% @psets.each do |p| %>
-<%= link_to p.name, { pset_id: p.id } %> 
-<% end %>
+	<% @psets.each do |p| %>
+	<%= link_to p.name, { pset_id: p.id } %> 
+	<% end %>
 
-<% if @pset %>
-<%= form_tag students_quiz_submit_path do |f| %>
-<%= hidden_field_tag :pset_id, @pset.id %>
-<% @students.each do |s| %>
-  <div class="form-row">
-    <div class="col-2">
-      <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="<%= s.name %>">
-    </div>
-    <div class="col-8">
-		<% bla = s.submits.where(pset_id: @pset.id).first%>
-      <input type="text" name="grades[<%= s.id %>]" class="form-control" placeholder="" value="<%= bla.grade.subgrades.points if bla %>">
-    </div>
-  </div>
-<% end %>
-<input type="submit">
-<% end %>
-<% end %>
+	<% if @pset %>
+	<%= form_tag students_quiz_submit_path do |f| %>
+	<%= hidden_field_tag :pset_id, @pset.id %>
+	<table class="table" style="width:auto">
+		<tr>
+			<td>Name</td>
+			<% if @grading_definition %>
+			<% @grading_definition['subgrades'].each do |subgrade_name, subgrade_type| %>
+			<td><%= subgrade_name %></td>
+			<% end %>
+			<% end %>
+		</tr>
+		<% @students.each do |s| %>
+		<tr>
+			<td>
+				<input type="text" readonly class="form-control-plaintext" id="staticEmail" value="<%= s.name %>">
+			</td>
+			<% if @grading_definition %>
+			<% bla = s.submits.where(pset_id: @pset.id).first%>
+			<% @grading_definition['subgrades'].each do |subgrade_name, subgrade_type| %>
+			<td>
+				<input type="text" name="grades[<%= s.id %>][subgrade_name]" class="form-control" placeholder="" value="<%= bla.grade.subgrades.points if bla %>">
+			</td>
+			<% end %>
+			<% end %>
+		</tr>
+		<% end %>
+	</table>
+	<input type="submit">
+	<% end %>
+	<% end %>
 
 </div>
