--- a/app/views/home/_grade.html.erb
+++ b/app/views/home/_grade.html.erb
@@ -7,7 +7,7 @@
 	<% Settings.grading['grades'][grade.pset.name]['subgrades'].each_pair do |subgrade_name, unin| %>
 	<% k=subgrade_name %>
 	<% v=grade.subgrades[k] %>
-	<span class="btn btn-sm btn-outline-secondary"><%= k.capitalize %> <span class="badge badge-secondary"><%= v %></span></span>
+	<span class="btn btn-sm btn-outline-secondary"><%= k.capitalize %> <span class="badge badge-secondary"><%= translate_grade(v) %></span></span>
 	<% end %>
 	<% end %>
 	<% if !Settings.grading['grades'][grade.pset.name] || !Settings.grading['grades'][grade.pset.name]['hide_calculated'] %>
