--- a/app/views/ask/_form.html.erb
+++ b/app/views/ask/_form.html.erb
@@ -5,8 +5,9 @@
 <% end %>
 <li class="dropdown-header"  style="padding:2px 10px 0 10px;">
 	<%= form_tag(ask_do_path, method: :post, remote: true) do %>
-		<textarea name="question" class="form-control" rows="3" required placeholder="What do you need help with?" style="margin-top:0.5em"></textarea>
-        <input type="text" name="location" class="form-control" required placeholder="Enter your location" style="margin-top:0.5em" value="<%= current_user.last_known_location %>">
+		<textarea name="question" class="form-control" rows="3" required placeholder="Briefly describe your question" style="margin-top:0.5em"></textarea>
+		<input type="text" name="subject" class="form-control" required placeholder="About which assignment?" style="margin-top:0.5em" value="">
+		<input type="text" name="location" class="form-control" required placeholder="Enter your location" style="margin-top:0.5em" value="<%= current_user.last_known_location %>">
 		<button id="ask-button" data-loading-text="Posting question..." type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default  btn-block btn-warning" name="how" value="hands">Ask for assistance</button>
 	<% end %>
 </li>
