--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -7,16 +7,7 @@
 	<% if @my_hands.any? %>
 	<% @my_hands.each do |hand| %>
 	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item active') do %>
-	<% if hand.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %>
-	<%= hand.user.name %>
-	<span class="badge badge-light"><%= hand.location %></span>
-	<% if hand.user.group %>
-		(<%= hand.user.group.name %>)
-	<% else %>
-		<span class="pull-right badge badge-secondary"><%= hand.user.schedule && hand.user.schedule.name %></span>
-	<% end %>
-	<br>
-	<small>Asked a question <%= time_ago_in_words(hand.created_at) %> ago</small>
+	<%= render partial: "item", object: hand %>
 	<% end %>
 	<% end %>
 	<% end %>
@@ -24,22 +15,12 @@
 
 	<% @hands.each do |hand| %>
 	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item') do %>
-	<% if hand.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %>
-	<%= hand.user.name %>
-	<span class="badge badge-light"><%= hand.location %></span>
-	<% if hand.user.group %>
-		(<%= hand.user.group.name %>)
-	<% else %>
-		<span class="pull-right badge badge-secondary"><%= hand.user.schedule && hand.user.schedule.name %></span>
-	<% end %>
-	<br>
-	<small class="text-danger">Asked a question <%= time_ago_in_words(hand.created_at) %> ago</small>
+	<%= render partial: "hand", object: hand %>
 	<% end %>
 	<% end %>
 
 
 	<% if @long_time_users.any? %>
-
 	<% @long_time_users.each do |user| %>
 	<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
 	<%= user.name %>
