--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -14,7 +14,7 @@
 			<a class="dropdown-toggle" href="#" role="button" id="schedule_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				<%= @group_name || @schedule_name %></a>
 
-			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="schedule_dropdown">
+			<div class="dropdown-menu" aria-labelledby="schedule_dropdown">
 				<% Schedule.all.each do |s| %>
 				<%= link_to s.name, user_assign_schedule_path(user_id: current_user.id, schedule_id: s.id), method: :post, class: "dropdown-item" %>
 				<% end %>
