--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -25,14 +25,14 @@
 	<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
 	<%= user.name %>
 	<% if user.group %>
-	<span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(hand.user.group.name) %>"><%= user.group.name %></span>
+	<span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(user.group.name) %>"><%= user.group.name %></span>
 	<% elsif user.schedule %>
 	<span class="pull-right badge badge-secondary"><%= user.schedule.name %></span>
 	<% end %>
 	<br>
 	<small>
 		<% if user.last_spoken_at.blank? %>
-		never asked anything <%= time_ago_in_words(hand.created_at) %>
+		never asked anything
 		<% else %>
 		<%= "spoken " + time_ago_in_words(user.last_spoken_at) + " ago" unless user.last_spoken_at.blank? %>
 		<% end %>
