--- a/app/views/hands/_hand.html.erb
+++ b/app/views/hands/_hand.html.erb
@@ -1,9 +1,9 @@
 <% if hand.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %>
 <%= hand.user.name %> / <strong><%= hand.subject %></strong>
-<% if hand.user.group %>
+<% if not Schedule.many? or hand.user.group %>
 <span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(hand.user.group.name) %>"><%= hand.user.group.name %></span>
 <% elsif hand.user.schedule %>
-<span class="pull-right badge badge-secondary"><%= hand.user.schedule.name %></span>
+<span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(hand.user.schedule.name) %>"><%= hand.user.schedule.name %></span>
 <% end %>
 <br>
 <small>in line for <%= time_ago_in_words(hand.created_at) %> @ <%= hand.location %></small>
