--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -24,17 +24,17 @@
 	<% @long_time_users.each do |user| %>
 	<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
 	<%= user.name %>
-	<% if user.group %>
+	<% if not Schedule.many? or user.group %>
 	<span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(user.group.name) %>"><%= user.group.name %></span>
 	<% elsif user.schedule %>
-	<span class="pull-right badge badge-secondary"><%= user.schedule.name %></span>
+	<span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(user.schedule.name) %>"><%= user.schedule.name %></span>
 	<% end %>
 	<br>
 	<small>
 		<% if user.last_spoken_at.blank? %>
-		never asked anything
+		never asked anything before
 		<% else %>
-		<%= "spoken " + time_ago_in_words(user.last_spoken_at) + " ago" unless user.last_spoken_at.blank? %>
+		<%= "last spoken " + time_ago_in_words(user.last_spoken_at) + " ago" unless user.last_spoken_at.blank? %>
 		<% end %>
 		<%= "@ " + user.last_known_location if not user.last_known_location.blank? %>
 	</small>
