--- a/app/views/hands/_hand.html.erb
+++ b/app/views/hands/_hand.html.erb
@@ -1,6 +1,6 @@
 <% if hand.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %>
 <%= hand.user.name %> / <strong><%= hand.subject %></strong>
-<% if not Schedule.many? or hand.user.group %>
+<% if !Schedule.many? or hand.user.group %>
 <span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(hand.user.group.name) %>"><%= hand.user.group.name %></span>
 <% elsif hand.user.schedule %>
 <span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(hand.user.schedule.name) %>"><%= hand.user.schedule.name %></span>
