--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -24,7 +24,7 @@
 	<% @long_time_users.each do |user| %>
 	<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
 	<%= user.name %>
-	<% if !Schedule.many? or user.group %>
+	<% if !Schedule.many? || user.group %>
 	<span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(user.group.name) %>"><%= user.group.name %></span>
 	<% elsif user.schedule %>
 	<span class="pull-right badge badge-secondary" style="<%= get_colors_for_text(user.schedule.name) %>"><%= user.schedule.name %></span>
