--- a/app/views/config/_settings.html.erb
+++ b/app/views/config/_settings.html.erb
@@ -24,3 +24,14 @@
 		</div>
 	</div>
 <% end %>
+
+<%= form_for(:settings, url: config_settings_path(), remote: true, html: { id: "enable_hands_groups" }) do |form| %>
+	<div class="form-group">
+		<div class="form-check">
+			<%= form.check_box :hands_groups, { remote: true, checked: Settings.hands_groups, id: "enable_hands_groups_check", class: "form-check-input", onclick: "$('#enable_hands_groups').trigger('submit.rails');" } %>
+			<label class="form-check-label" for="enable_hands_groups_check">
+				Always show group name in help list
+			</label>
+		</div>
+	</div>
+<% end %>
