--- a/app/views/ask/_waiting.html.erb
+++ b/app/views/ask/_waiting.html.erb
@@ -1,5 +1,5 @@
 <div style="text-align: center; padding:1em;">
-	<h5 style="margin-top:0">You are number <%= @number %> in line.</h5>
+	<h5 style="margin-top:0"><%= t "hands.you_are_number_1_in_line", number: @number %></h5>
 	<img id="waiting-gif" src="" class="mx-auto my-3" style="display: block; max-width: 250px; max-height: 180px;">
-	<%= link_to 'Cancel request', ask_cancel_path, method: :post, remote: true, class: 'btn btn-warning' %>
+	<%= link_to t("hands.cancel_request"), ask_cancel_path, method: :post, remote: true, class: 'btn btn-warning' %>
 </div>
