--- a/app/views/config/_settings.html.erb
+++ b/app/views/config/_settings.html.erb
@@ -14,6 +14,18 @@
 	</div>
 <% end %>
 
+<%= form_for(:settings, url: config_settings_path(), remote: true, html: { id: "enable_hands_location" }) do |form| %>
+	<div class="form-group">
+		<div class="form-check">
+			<%= form.check_box :hands_location, { remote: true, checked: Settings.hands_location, id: "enable_hands_location_check", class: "form-check-input", onclick: "$('#enable_hands_location').trigger('submit.rails');" } %>
+			<label class="form-check-label" for="enable_hands_location_check">
+				Ask for location
+			</label>
+		</div>
+	</div>
+<% end %>
+
+
 <%= form_for(:settings, url: config_settings_path(), remote: true, html: { id: "enable_hands_bumper" }) do |form| %>
 	<div class="form-group">
 		<div class="form-check">
