--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -13,7 +13,17 @@
 				</div>
 			</form>
 			</div>
-		</div>		
+		</div>
+		
+		<div class="card">
+			<div class="card-body">
+				<% @notes.each do |note| %>
+				<div style="margin-bottom:1em">
+				<%= note.student.name %>:<br><%= note.text %><br><small>(<%= note.author_name %> @ <%= time_ago_in_words(note.updated_at) %> ago)</small>
+				</div>
+				<% end %>
+			</div>
+		</div>
 		
 		<script>
 			$('#student-search').on('change paste input', function(e) {
