--- a/app/views/students/quiz.html.erb
+++ b/app/views/students/quiz.html.erb
@@ -25,11 +25,14 @@
 			<% bla = s.submits.where(pset_id: @pset.id).first%>
 			<% @grading_definition['subgrades'].each do |subgrade_name, subgrade_type| %>
 			<td>
-				<input type="text" name="grades[<%= s.id %>][<%= subgrade_name %>]" class="form-control" placeholder="" value="<%= bla.grade.subgrades[subgrade_name] if bla && bla.grade %>">
+				<input type="text" name="grades[<%= s.id %>][subgrades][<%= subgrade_name %>]" class="form-control" placeholder="" value="<%= bla.grade.subgrades[subgrade_name] if bla && bla.grade %>">
 			</td>
 			<% end %>
 			<td>
 				<%= bla.grade.comments if bla && bla.grade %>
+			</td>
+			<td>
+				<input type="text" name="grades[<%= s.id %>][notes]" class="form-control" placeholder="" value="<%= bla.grade.notes if bla && bla.grade %>">
 			</td>
 			<% end %>
 		</tr>
