--- a/app/views/students/quiz.html.erb
+++ b/app/views/students/quiz.html.erb
@@ -12,9 +12,10 @@
 			<td>Name</td>
 			<% if @grading_definition %>
 			<% @grading_definition['subgrades'].each do |subgrade_name, subgrade_type| %>
-			<td><%= subgrade_name %></td>
+			<td><%= subgrade_name.capitalize %></td>
 			<% end %>
 			<% end %>
+			<td>Notes</td>
 		</tr>
 		<% @students.each do |s| %>
 		<tr>
@@ -28,9 +29,6 @@
 				<input type="text" name="grades[<%= s.id %>][subgrades][<%= subgrade_name %>]" class="form-control" placeholder="" value="<%= bla.grade.subgrades[subgrade_name] if bla && bla.grade %>">
 			</td>
 			<% end %>
-			<td>
-				<%= bla.grade.comments if bla && bla.grade %>
-			</td>
 			<td>
 				<input type="text" name="grades[<%= s.id %>][notes]" class="form-control" placeholder="" value="<%= bla.grade.notes if bla && bla.grade %>">
 			</td>
