--- a/app/views/submits/show.html.erb
+++ b/app/views/submits/show.html.erb
@@ -6,7 +6,7 @@
 		<%= button_to 'Mark as finished', finish_submits_path, class: 'btn btn-secondary m-3', data: { confirm:'Are you sure? All grades that have been fully entered will be marked as "finished". You will not be able to edit those after.' } %>
 		<% @to_grade.each do |submit| %>
 		<li class="nav-item">
-			<%= link_to "#{submit.user_name}<br>#{submit.pset_name} <span class='badge badge-secondary pull-right'>#{submit.grade_status || 'ungraded'}</span>".html_safe, submit_path(submit.id, params.slice(:pset, :group, :status)), class: 'nav-link' %>
+			<%= link_to "#{submit.user_name}<br>#{submit.pset_name} <span class='badge badge-secondary pull-right'>#{submit.grade_status || 'ungraded'}</span>".html_safe, submit_path(submit.id, params.permit(:pset, :group, :status)), class: 'nav-link' %>
 		</li>
 		<% end %>
 	</ul>
