--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -8,7 +8,8 @@
 			}
 		});
 	</script>
-	<%= mathjax_tag %>
+	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <% end %>
 
 <% content_for :footer do %>
