factor auth session management to separate controller

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -49,4 +49,4 @@
 <% end%>
 
 
-<%= link_to fa_icon("sign-out") + "Logout", profile_logout_path, class: 'dropdown-item' %>
+<%= link_to fa_icon("sign-out") + "Logout", session_logout_path, class: 'dropdown-item' %>
