--- a/app/views/layouts/_float_nav.html.erb
+++ b/app/views/layouts/_float_nav.html.erb
@@ -39,7 +39,7 @@
 		</div>
 	</li>
 	<% else %>
-	<li><%= link_to("Sign in".html_safe, profile_login_url)%></li>
+	<li><%= link_to("Sign in".html_safe, session_login_path)%></li>
 	<% end %>
 	
 </ul>
