add grades overview

--- a/app/views/home/submissions.html.erb
+++ b/app/views/home/submissions.html.erb
@@ -1,6 +1,9 @@
 <% if @items.present? %>
-<div id="timeline" class="row">
-	<div class="col">
+<div id="timeline" class="row flex-xl-row-reverse">
+	<div class="col-xl-6 col-lg-12">
+		<%= render partial: "grades_overview" %>
+	</div>
+	<div class="col-xl-6 col-lg-12">
 		<%= render partial: "items" %>
 	</div>
 </div>
