--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -36,6 +36,7 @@
 <%= link_to fa_icon("hand-pointer-o") + 'Hands', hands_path, class: 'dropdown-item' %>
 <% end %>
 <% if !Schedule.exists? or current_user.groups.any? or current_user.schedules.any? %>
+<%= link_to fa_icon("line-chart") + 'Overview', students_path, class: 'dropdown-item' %>
 <%= link_to fa_icon("file-text-o") + 'Grading', submits_path, class: 'dropdown-item' %>
 <% end %>
 <div class="dropdown-divider"></div>
