jscriptify admin grades UI and streamline grading controllers/views

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -7,7 +7,7 @@
 <% if Settings.tests_present %>
 <%= link_to fa_icon("check") + 'Tests', tests_path, class: 'dropdown-item' %>
 <% end %>
-<%= link_to fa_icon("file-text-o") + 'Grading', submits_path, class: 'dropdown-item' %>
+<%= link_to fa_icon("file-text-o") + 'Grading', grading_index_path, class: 'dropdown-item' %>
 <div class="dropdown-divider"></div>
 <% if Settings.hands_allow %>
 <%= link_to fa_icon("hand-pointer-o") + 'Hands', hands_path, class: 'dropdown-item' %>
@@ -18,7 +18,7 @@
 <% elsif current_user.head? %>
 
 <%= link_to fa_icon("line-chart") + 'Overview', students_path, class: 'dropdown-item' %>
-<%= link_to fa_icon("file-text-o") + 'Grading', submits_path, class: 'dropdown-item' %>
+<%= link_to fa_icon("file-text-o") + 'Grading', grading_index_path, class: 'dropdown-item' %>
 <% if Settings.tests_present %>
 <%= link_to fa_icon("check") + 'Tests', tests_path, class: 'dropdown-item' %>
 <% end %>
@@ -36,7 +36,7 @@
 <%= link_to fa_icon("hand-pointer-o") + 'Hands', hands_path, class: 'dropdown-item' %>
 <% end %>
 <% if !Schedule.exists? or current_user.groups.any? or current_user.schedules.any? %>
-<%= link_to fa_icon("file-text-o") + 'Grading', submits_path, class: 'dropdown-item' %>
+<%= link_to fa_icon("file-text-o") + 'Grading', grading_index_path, class: 'dropdown-item' %>
 <% end %>
 <div class="dropdown-divider"></div>
 
