--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -1,7 +1,7 @@
 <div id="timeline">
 	<div class="card-columns" style="column-count:2">
 
-		<%= render partial: "user_modal" %>
+		<%= render partial: "modal_browser" %>
 
 		<div class="card">
 			<div class="card-body">
@@ -95,7 +95,7 @@
 						<li class="list-group-item d-flex align-items-center">
 							<%= group.name %>
 							<span class="badge badge-primary ml-auto"><%= link_to "#{group.submits.includes(:grade).where(grades: { submit_id: nil }).count} sub", submits_path(group: group.id), class: 'text-light' %></span>
-							<span class="badge badge-primary ml-1"><%= link_to "#{group.grades.open.count} gra", submits_path(group: group.id, status: Grade.statuses[:open]), class: 'text-light' %></span>
+							<span class="badge badge-primary ml-1"><%= link_to "#{group.grades.unfinished.count} gra", submits_path(group: group.id, status: Grade.statuses[:unfinished]), class: 'text-light' %></span>
 							<span class="badge badge-primary ml-1"><%= link_to "#{group.grades.finished.count} fin", submits_path(group: group.id, status: Grade.statuses[:finished]), class: 'text-light' %></span>
 							<span class="badge badge-secondary ml-1"><%= link_to "#{group.grades.finished.count} reo", reopen_grades_path(group.id), remote: true, method: :post, data: { confirm: "Sure?" }, class: "text-light" %></span>
 						</li>
@@ -106,7 +106,6 @@
 				</div>
 		
 				<% if @new_students.present? %>
-
 						<div class="card">
 							<div class="card-body">
 								<h5 class="card-title">New students</h5>
@@ -114,7 +113,7 @@
 							<ul class="list-group list-group-flush">
 								<% @new_students.each do |student| %>
 								<li class="list-group-item d-flex align-items-center">
-									<%= link_to student.name, "#", data: { toggle: "modal", target: "#user-modal", user: student.id } %>
+									<%= link_to student.name, "#", onclick: "$('#modal-browser').modal('show');", data: { toggle: "modal", target: "#user-modal", user: student.id } %>
 									<span class="badge badge-primary ml-auto"><%= student.created_at.strftime("%e %b") %></span>
 								</li>
 								<% end %>
@@ -152,7 +151,6 @@
 					</script>
 				</div>
 			</div>
-			<%= render partial: "user_modal" %>
 		<% end %>
 
 		<% end %>
