--- a/app/views/config/_pages.html.erb
+++ b/app/views/config/_pages.html.erb
@@ -2,6 +2,9 @@
 	<%= fa_icon "edit", style: 'margin-right:0.25em;', class: 'dropcap'  %>
 	Published pages
 </h2>
+
+<%= toggle_setting_form('room_for_toc', 'Make room for table of contents') %>
+
 <p>Check all the pages that should be visible to students and guests.</p>
 
 <% @all_sections.each do |section| %>
