--- a/app/views/application/_modal_browser.html.erb
+++ b/app/views/application/_modal_browser.html.erb
@@ -1,4 +1,4 @@
-<div id="modal-browser" class="modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div id="modal-browser" class="modal" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-dialog-scrollable modal-lg" role="document">
 		<div class="modal-content">
 			<div id="modal-browser-header" class="modal-header">
