--- a/app/views/config/_pages.html.erb
+++ b/app/views/config/_pages.html.erb
@@ -4,6 +4,7 @@
 </h2>
 
 <%= toggle_setting_form('room_for_toc', 'Make room for table of contents') %>
+<%= toggle_setting_form('pages_enable_math', 'Enable MathJax') %>
 
 <p>Check all the pages that should be visible to students and guests.</p>
 
