--- a/app/views/home/submissions.html.erb
+++ b/app/views/home/submissions.html.erb
@@ -6,7 +6,7 @@
 		</div>
 	<% end %>
 	<div class="<%= 'col-xl-6' if !@overview.empty? %> col-lg-12">
-		<%= render partial: "items" %>
+		<%= render partial: "items/item", collection: @items %>
 	</div>
 </div>
 <% end %>
