--- a/app/views/schedules/schedules/_overview_table.html.erb
+++ b/app/views/schedules/schedules/_overview_table.html.erb
@@ -11,7 +11,7 @@
 	<% user_list.each do |user| %>
 	<tr <%= 'class=table-warning' if user.stagnated? %>>
 		<td>
-			<!-- <%= link_to user.name, user_path(user) %> -->
+			<!-- <%= link_to user.name, manage_user_path(user) %> -->
 			<%= user.name %>
 			<% if user.last_known_location %>
 			<span class="fa fa-location-arrow" aria-hidden="true" data-toggle="tooltip" title="<%= user.last_known_location %>"></span>
