--- a/app/views/admin/site/_index.html.erb
+++ b/app/views/admin/site/_index.html.erb
@@ -2,6 +2,10 @@
 
 <%= render partial: 'email', layout: 'modal_card', locals: { title: 'E-mail', subtitle: nil } %>
 
+<%= render partial: 'settings', layout: 'modal_card', locals: { title: 'Settings', subtitle: nil }%>
+
 <%= render partial: 'dropbox', layout: 'modal_card', locals: { title: 'Dropbox', subtitle: nil }%>
 
 <%= render partial: 'webhook', layout: 'modal_card', locals: { title: 'Webhook', subtitle: nil }%>
+
+<%= render partial: 'permissions', layout: 'modal_card', locals: { title: 'Permissions', subtitle: nil }%>
